// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] elements/<Select /> should match snapshot 1`] = `
<div>
  <select
    class="Select-gjmg2q-0 hiUFeV"
  />
</div>
`;

exports[`[Contrib] elements/<Select /> should match snapshot with \`disabled\` prop 1`] = `
<div>
  <select
    class="Select-gjmg2q-0 hwJewC"
    disabled=""
  />
</div>
`;
